--- a/estilo.css
+++ b/estilo.css
@@ -58,36 +58,42 @@ li a:hover {
   position: absolute;
   top: 45px;
 }
+h2 {
+  text-align: center;
+}
 #imagemHome {
-  width: 1000px;
-  height: 200px;
-  margin-left: 150px;
+  width: 110%;
+  height: 250px;
 }
 .conteudo01 {
   position: absolute;
   top: 45px;
 }
-.boxImage {
-  position: absolute;
-  width: 90%;
-  height: 400px;
-  background: rgb(255, 166, 0);
-  top: 90px;
-  left: 0;
-  margin: 20px;
-  border-color: black;
-  border-width: 10px;
-  border-style: solid;
-  padding: 10px;
-  display: flex;
-  justify-content:center;
-}
 #mar {
-  width: 800%;
-  height: 400px;
+  width: 100%;
+  height: 300px;
 }
-
-
-
+.conteudo02 {
+  position: absolute;
+  top: 45px;
+  margin-left: 25%;
+}
+#lista {
+  position: relative;
+  height: 400px;
+  width: 700px;
+}
+.rodape2 {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  color: white;
+  background: gray;
+  left: 0;
+  bottom: 0;
+  top: 1500px;
+  display: flex;
+  justify-content: center;
+}
 
 
